# longest-word

./: pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: .python-ci.yml
longest_word/: game.py
templates/: check.html
tests/: test_game.py
