[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Pavel Liser <liser.pavel@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.9"
requests = "^2.28.1"
flask = "^2.2.2"
flask-session = "^0.4.0"
flask-ext = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
